--- a/responsive/my-team-page.byStephenRanaud/sass/styles.scss
+++ b/responsive/my-team-page.byStephenRanaud/sass/styles.scss
@@ -48,6 +48,17 @@ p {
     letter-spacing: 0em;
     text-align: left;
 }
+#by-user {
+    font-family: Montserrat;
+    font-size: calc(.8rem + .07vmin);
+    font-style: normal;
+    font-weight: 600;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: #BDBDBD;
+    padding: 10px 0;
+  }
 
 .header-main {
     display: flex;
@@ -72,7 +83,7 @@ p {
 .wrapper {
     max-width: map-get($map: $break-points, $key: max-size);
     margin: auto;
-    // overflow: hidden;
+    overflow: hidden;
 }
 
 .team-grid {
